# ONI-AI

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: bridge-request.example.json  bridge-response.example.json
examples/request_idle/: response.json  state.json
mod/: OniAiAssistant.cs  OniAiConfig.cs  OniAiController.HttpServer.cs  OniAiController.cs  RuntimeReloadCoordinator.cs  mod.yaml  mod_info.yaml  oni_ai_config.ini
runtime/: EntryPoint.cs  OniAiController.cs  OniAiRuntime.cs  RuntimeActionApi.cs  RuntimeApiBackend.cs  RuntimeApiRouter.cs  RuntimeCatalogApi.cs  RuntimeControlApi.cs  RuntimeHooks.cs  RuntimeJson.cs  RuntimePrioritiesApi.cs  RuntimeStateCameraApi.cs
schemas/: bridge-request.schema.json  bridge-response.schema.json  openapi.yaml
scripts/: build.sh  build_runtime.sh  hot_reload_runtime.sh  install.sh
src/oni_ai/: ai_bridge.py
src/oni_ai_bridge/: ai_bridge.py
tests/: test_ai_bridge.py  test_ai_bridge_real_codex.py  test_ai_bridge_real_codex_request_idle.py  test_csharp_mock_server_bridge.py  test_hot_reload_runtime.py  test_oni_http_server_live.py
tests/csharp/OniApiMockServer/: Program.cs
