[project]
name = "oni-ai"
version = "0.1.0"
description = "Local bridge service for ONI AI Assistant"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
oni-ai-bridge = "oni_ai.ai_bridge:main"

[build-system]
requires = ["uv_build>=0.7.0,<0.8.0"]
build-backend = "uv_build"

[tool.uv]
package = true

[dependency-groups]
dev = [
  "pytest>=8.3.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "real_codex: runs codex exec against realistic snapshot payload",
  "hot_reload: runs ONI runtime hot-reload integration watcher test",
  "integration: runs local bridge integration tests",
]
